--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^4.0.3",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^8.1.0",
+    "reactjs-popup": "^2.0.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
